k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-yuga-dist
  namespace: go-yuga-dist
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-yuga-dist
  template:
    metadata:
      labels:
        app: go-yuga-dist
    spec:
      serviceAccountName: go-yuga-dist-sa
      containers:
      - name: go-yuga-dist
        image: go-yuga-dist:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-yuga-dist
  namespace: go-yuga-dist
spec:
  selector:
    app: go-yuga-dist
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
